--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,6 +8,9 @@
 
 :root {
   --primary: #764ABC;
+  --bg-linear: linear-gradient(0deg, var(--primary) 0%, transparent),
+    linear-gradient(45deg, #f0f 0%, transparent),
+    linear-gradient(-125deg, #0ff 0%, transparent);
 }
 
 html {
@@ -28,4 +31,6 @@ button, a {
   cursor: pointer;
   color: inherit;
   text-decoration: none;
+  border: none;
+  background: transparent;
 }
